fixing z-index for bar popups

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ html, body, {
   position: relative;
   height: 100%;
   width: 98%;
+  z-index: 0;
 }
 
 #logo {
@@ -78,7 +79,7 @@ html, body, {
   margin: 5px 10px 5px 10px;
   padding: 10px;
   color: #555a66;
-  z-index: 0;
+  z-index: 1;
 }
 
 .axis {
